@startuml
class Product {
  +ProductId: int
  +Name: string
  +Price: decimal

  +CategoryId: int
  +Category: Category
}

class Category {
  +CategoryId: int
  +Name: string
}

class OrderLine {
  +TableNr: int
  +ProductId: int
  +Amount: int
  +Product: Product
  +CostObject: CostObject
}

class CostObject {
  +CostObjectId: int
  +Name: string
  +Budget: decimal
  +Email: string
  +TelNr: string
}

Product "*" -- "1" Category: has >
OrderLine "*" -- "1" Product: has >
OrderLine "1" -- "0..1" CostObject: could have >

@enduml
